# sigmaspectra

./: .gitignore  .travis.yml  CHANGELOG.md  CMakeLists.txt  LICENSE.txt  README  README.md  TODO  appveyor.yml  gpl-header  installer.nsi  sigmaSpectra.pro  sigmaSpectraConfig.pri  sigmaspectraconfig.pri
contrib/: install_appveyor_dependencies.bat  make_ico.sh
example/: example-target.csv
example/DUZCE/: 1060-E.AT2  1060-N.AT2  531-E.AT2  531-N.AT2
example/HECTOR/: HEC000.AT2  HEC090.AT2
example/KOBE/: NIS000.AT2
example/LOMAP/: G01000.AT2  G01090.AT2  G06000.AT2  G06090.AT2  GIL337.AT2  LOB000.AT2  LOB090.AT2  SJTE225.AT2  SJTE315.AT2  UC2000.AT2  UC2090.AT2
example/NORTHR/: 0141-270.AT2  0141-360.AT2  5080-270.AT2  5080-360.AT2  CHL070.AT2  CHL160.AT2  H12090.AT2  HOW060.AT2  L09000.AT2  L09090.AT2  LA0000.AT2  LA0090.AT2  VAS000.AT2  WON095.AT2
example/SFERN/: L04111.AT2  L04201.AT2  L09021.AT2  L09291.AT2  L12021.AT2  L12291.AT2
manual/: manual.css  manual.html  manual.tex  manual2.html  manual3.html  references.bib
middleware/: invoke
resources/: CMakeLists.txt  resources.qrc  sigmaSpectra.qrc  sigmaspectra.cmake.desktop
resources/doc/: index.html  intro.html  tutorial.html
source/: AbstractMotion.cpp  AbstractMotion.h  AxisOptionsGroupBox.cpp  AxisOptionsGroupBox.h  CMakeLists.txt  ConfigurePlotDialog.cpp  ConfigurePlotDialog.h  ExportDialog.cpp  ExportDialog.h  FlagMotionsDialog.cpp  FlagMotionsDialog.h  HelpDialog.cpp  HelpDialog.h  InputTableModel.cpp  InputTableModel.h  MainWindow.cpp  MainWindow.h  Makefile  Motion.cpp  Motion.h  MotionGroup.cpp  MotionGroup.h  MotionLibrary.cpp  MotionLibrary.h  MotionPair.cpp  MotionPair.h  MotionSuite.cpp  MotionSuite.h  MyTableView.cpp  MyTableView.h  StringListDelegate.cpp  StringListDelegate.h  SuiteDialog.cpp  SuiteDialog.h  defines.h.cmake  main.cpp
src/: AbstractMotion.cpp  AbstractMotion.h  AxisOptionsGroupBox.cpp  AxisOptionsGroupBox.h  ConfigurePlotDialog.cpp  ConfigurePlotDialog.h  ExportDialog.cpp  ExportDialog.h  FlagMotionsDialog.cpp  FlagMotionsDialog.h  HelpDialog.cpp  HelpDialog.h  InputTableModel.cpp  InputTableModel.h  MainWindow.cpp  MainWindow.h  Makefile  Motion.cpp  Motion.h  MotionGroup.cpp  MotionGroup.h  MotionLibrary.cpp  MotionLibrary.h  MotionPair.cpp  MotionPair.h  MotionSuite.cpp  MotionSuite.h  MyTableView.cpp  MyTableView.h  PairedMotion.h  StringListDelegate.cpp  StringListDelegate.h  SuiteDialog.cpp  SuiteDialog.h  main.cpp
ui/: MainWindow.ui  SuiteDialog.ui
win/: CMakeLists.txt  installer.cmake.wxs
